--- a/index.html
+++ b/index.html
@@ -278,11 +278,16 @@
       font-weight: 500;
       line-height: 1.1;
       letter-spacing: -0.02em;
-      margin-bottom: var(--spacing-lg);
+      margin-bottom: var(--spacing-xl);
+      margin-top: calc(-1 * var(--spacing-3xl));
       text-shadow: 0 4px 24px rgba(0, 0, 0, 0.6);
       transition: all 0.6s cubic-bezier(0.16, 1, 0.3, 1);
       position: relative;
       transform-origin: center center;
+    }
+
+    .main-title br {
+      display: none;
     }
 
     .main-title .letter {
@@ -839,9 +844,15 @@
         min-height: calc(100vh - var(--safe-area-top) - var(--safe-area-bottom) - 60px);
       }
 
+      .main-title br {
+        display: block;
+      }
+
       .main-title {
         font-size: var(--font-size-3xl);
         margin-bottom: var(--spacing-md);
+        margin-top: calc(-1 * var(--spacing-2xl));
+        line-height: 1.3;
       }
 
       .nav-tab {
@@ -884,6 +895,10 @@
 
     /* Desktop - show all elements */
     @media (min-width: 769px) {
+      .main-title br {
+        display: none;
+      }
+
       .physics-moon {
         pointer-events: auto;
         cursor: grab;
@@ -994,7 +1009,7 @@
     </header>
 
     <main class="main-content" id="main-content">
-      <h1 class="main-title" id="mainTitle">Welcome to QRBrand Ltd</h1>
+      <h1 class="main-title" id="mainTitle">Welcome to<br>QRBrand Ltd</h1>
 
       <!-- CTA Black Banner -->
       <div class="cta-banner">
@@ -1047,7 +1062,7 @@
       DEBUG: false,
       MAX_FPS: 60,
       PHYSICS_ENABLED: true,
-      HAPTICS_ENABLED: true
+      HAPTICS_ENABLED: false // Disabled to prevent console errors
     };
 
     const fallbackGradients = [
@@ -1223,9 +1238,14 @@
             const email = item.getAttribute('data-email');
             
             if (phone) {
-              window.location.href = `tel:${phone}`;
+              // Prevent app from breaking when returning from phone call
+              setTimeout(() => {
+                window.location.href = `tel:${phone}`;
+              }, 100);
             } else if (email) {
-              window.location.href = `mailto:${email}`;
+              setTimeout(() => {
+                window.location.href = `mailto:${email}`;
+              }, 100);
             }
             
             if (APP_CONFIG.HAPTICS_ENABLED && navigator.vibrate) {
@@ -2214,14 +2234,37 @@
       console.error('Unhandled promise rejection:', e.reason);
     });
 
-    // دورة حياة الصفحة
+    // App lifecycle and focus management
     window.addEventListener('beforeunload', () => {
       if (window.app && window.app.destroy) {
         window.app.destroy();
       }
     });
 
-    // تهيئة التطبيق
+    // Handle page visibility changes (when returning from phone call)
+    document.addEventListener('visibilitychange', () => {
+      if (!document.hidden && window.app && window.app.isInitialized) {
+        // Restart physics when page becomes visible again
+        const physicsComponent = window.app.components.get('physics');
+        if (physicsComponent && !physicsComponent.isAnimating) {
+          physicsComponent.resetPhysics();
+          physicsComponent.startAnimation();
+        }
+      }
+    });
+
+    // Handle focus/blur events for better mobile support
+    window.addEventListener('focus', () => {
+      if (window.app && window.app.isInitialized) {
+        const physicsComponent = window.app.components.get('physics');
+        if (physicsComponent && !physicsComponent.isAnimating) {
+          physicsComponent.resetPhysics();
+          physicsComponent.startAnimation();
+        }
+      }
+    });
+
+    // Initialize app
     window.app = new App();
   </script>
 </body>
