Update HTML with latest changes

--- a/index.html
+++ b/index.html
@@ -994,7 +994,7 @@
     </header>
 
     <main class="main-content" id="main-content">
-      <h1 class="main-title" id="mainTitle">Welcome to QRBrand Ltd</h1>
+      <h1 class="main-title" id="mainTitle">QRBrand LTD</h1>
 
       <!-- CTA Black Banner -->
       <div class="cta-banner">
