Update HTML with latest changes

--- a/qrbrand-website/index.html
+++ b/qrbrand-website/index.html
@@ -69,8 +69,10 @@
   </div>
 
   <div class="content-modal" id="contentModal">
+    <button class="modal-close-btn" id="modalCloseBtn">
+      <span>×</span>
+    </button>
     <div id="modalContent"></div>
-    <div class="close-hint">Swipe up/down to close</div>
   </div>
 
   <div class="main-container">
@@ -110,6 +112,10 @@
 
       <section class="motivational-container" role="region" aria-label="Motivational quotes">
         <div class="black-hole" id="blackHole"></div>
+        <div class="animated-text-container" id="animatedTextContainer">
+          <div class="animated-text-line" id="animatedTextLine1"></div>
+          <div class="animated-text-line" id="animatedTextLine2"></div>
+        </div>
         <div class="motivational-quote" id="motivationalQuote">
           Success starts with one step in the right direction
         </div>
